# pytest

./: .gitignore  .pre-commit-config.yaml  .talismanrc  CHECKERS.md  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: main.py
tests/: conftest.py  test_main.py
