[tool.poetry]
name = "pytest-test"
version = "0.1.0"
description = ""
authors = ["Daniel Mansilla <dani@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
fastapi-pagination = ">=0.12.34,<0.13.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
vulture = "^2.14"
lizard = "^1.17.19"
xenon = "^0.9.3"
pylint = "^3.3.4"
wily = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "__pypackages__",
]
line-length = 100
indent-width = 4

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/"]

[tool.vulture]
ignore_decorators = ["@router.*"]
min_confidence = 90

[tool.coverage.run]
source = ["src/"]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov=src --cov-report=html --cov-report=term-missing:skip-covered --cov-fail-under=80 -v"
testpaths = ["tests"]
python_files = "test.py test_*.py *_tests.py"
